1999-09-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (SelectDecor): applied OL-DECOR fix by Neil Bird

1999-09-03  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm2.1 (AddToDecor):
	(UseStyle): clarified usage of UseStyle style

1999-09-02  Hippo

	* fvwm/{fvwm.c,screen.h,icons.c} Fixed client supplied icon pixmaps
	with the -visual option and different root/fvwm depths with Exceed
	* fvwm/borders.c: title button pixmaps that are smaller then the title
	height by an odd number are one pixel down (makes win95 styles better)

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* **/*: Applied transient handling patches by Mark Rainford.
	Man page and ChangeLog entries are still missing

	* configure.in: changed version to 2.3.8

1999-09-01  Hippo

	* libs/Picture.{c,h}:
	* fvwm/{fvwm,colormaps,menus,move_resize,virtual}.c
	* fvwm/{colormaps,screen,move_resize}.h: Fixed XorPixmap with
	fvwm -visual option.

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/move_resize.c (Maximize): implemented negative offsets for
	maximize

1999-09-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (get_selectable_item_index):
	(get_selectable_item_from_section):
	(get_selectable_item_count):
	(menuShortcuts): Meta-Up/Down move to next separator

1999-08-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Slide.c (SlideWindow): it's possible to turn off the XFlush
	after each MoveResize (faster and looks better).

1999-08-31  Hippo

	* fvwm/move_resize.c: different method of doing XORPixmap (fails)
	* libs/Picture.{h,c}: DestroyPicture now frees the colors allocated
	by LoadPicture., New functions: UseDefaltVisual, UseFvwmVisual.

1999-08-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Slide.c (SlideWindow): new file and function for sliding
	animations and simple animated moves

1999-08-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Colorset.c (SetRectangleBackground): fixed stretching/tiling
