@@ -284,7 +284,7 @@ sub wrongUsage {
 
 =head1 NAME
 
-fvwm-menu-directory @VERSION@ - builds a directory browsing menu for FVWM
+fvwm-menu-directory - builds a directory browsing menu for FVWM
 
 =head1 SYNOPSIS
 
