@@ -1,3 +1,9 @@
+1999-09-04  Mikhael Goikhman  <migo@homemail.com>
+
+	* configure.in: Included autogenerated from *.in
+	modules/FvwmConsole/FvwmConsoleC.pl;
+	patched autogenerated by autoconf config.status to enable 'make -j'.
+
 1999-09-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/decorations.c (SelectDecor): applied OL-DECOR fix by Neil Bird
